--- a/KeyExchangeProtocol/pom.xml
+++ b/KeyExchangeProtocol/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>keyexchange</artifactId>
+    <artifactId>KeyExchangeProtocol</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -49,6 +49,16 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+
 
     </dependencies>
 
