--- a/KeyExchangeProtocol/src/main/resources/application.properties
+++ b/KeyExchangeProtocol/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8087
+server.port=8089
 
 
 # Kafka Producer Properties
@@ -12,3 +12,7 @@ spring.kafka.consumer.group-id=my-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+
+spring.redis.host=localhost
+spring.redis.port=6379
