--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -22,7 +22,6 @@ spring.cloud.gateway.routes[1].uri=lb://SHORE-SERVICE/api/Shore
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/Shore/**
 
 
-
 ## discovery-server Route
 
 spring.cloud.gateway.routes[2].id=discovery-server
@@ -46,6 +45,16 @@ spring.cloud.gateway.routes[4].id=SHIP-SERVICE
 spring.cloud.gateway.routes[4].uri=lb://SHIP-SERVICE/api/ship
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/ship/**
 
+### rtk Service Route
+#spring.cloud.gateway.routes[5].id=WEBSOCKET-SERVICE
+#spring.cloud.gateway.routes[5].uri=ws://WEBSOCKET-SERVICE/
+#spring.cloud.gateway.routes[5].predicates[0]=Path=/api/socket/**
+
+## rtk Service Route
+spring.cloud.gateway.routes[5].id=WEBSOCKET-SERVICE
+spring.cloud.gateway.routes[5].uri=lb://WEBSOCKET-SERVICE/
+spring.cloud.gateway.routes[5].predicates[0]=Path=/**
+
 
 
 ## Zipkin configuration
@@ -53,8 +62,8 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/api/ship/**
 
 #keycloak configuration
 spring.security.oauth2.client.registration.SECOM-Client.client-id=SECOM-Client
-spring.security.oauth2.client.registration.SECOM-Client.client-secret=Qzofh2oNn80z1X0PjSPFYcEokrvfhXat
-spring.security.oauth2.client.registration.SECOM-Client.scope=openid, profile, roles
+spring.security.oauth2.client.registration.SECOM-Client.client-secret=zilcvnVNnCUqf44jd6hACNvRNd6sn0y9
+spring.security.oauth2.client.registration.SECOM-Client.scope=openid, profile, roles, Owner_ID
 spring.security.oauth2.client.registration.SECOM-Client.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.SECOM-Client.redirect-uri=http://localhost:8080/login/oauth2/code/gateway
 #spring.security.oauth2.client.registration.SECOM-Client.redirect-uri=http://localhost:8080/login/oauth2/code/{registrationId}
