--- a/WebSockets/src/main/resources/application.properties
+++ b/WebSockets/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=0
+spring.thymeleaf.enabled=true
+
+
 
 
 # Kafka Producer Properties
@@ -12,15 +15,15 @@ spring.kafka.consumer.group-id=my-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
-spring.application.name=KEYEX-SERVICE
 
+#redis config
 spring.redis.host=localhost
 spring.redis.port=6379
 
-
 #eureka server config
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=WEBSOCKET-SERVICE
 
+##key-cloak configuration
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8181/realms/SECOM/protocol/openid-connect/certs
-
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/SECOM
+#spring.security.oauth2.resourceserver.jwt.issuer=http://localhost:8181/realms/SECOM
