this is keyshared working

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.cloud.gateway.default-filters[0]=TokenRelay
 
 ## gnss Service Route
 
-spring.cloud.gateway.routes[0].id=KEYEX-SERVICE
-spring.cloud.gateway.routes[0].uri=lb://KEYEX-SERVICE/api/key
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/key/**
+spring.cloud.gateway.routes[0].id=KEY-SERVICE
+spring.cloud.gateway.routes[0].uri=lb://KEY-SERVICE/api1/key1
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api1/key1/**
 
 
 ## rtk Service Route
@@ -50,10 +50,16 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/api/ship/**
 #spring.cloud.gateway.routes[5].uri=ws://WEBSOCKET-SERVICE/
 #spring.cloud.gateway.routes[5].predicates[0]=Path=/api/socket/**
 
+spring.cloud.gateway.routes[5].id=KEYEX-SERVICE
+spring.cloud.gateway.routes[5].uri=lb://KEYEX-SERVICE/api/key
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/key/**
+
 ## rtk Service Route
-spring.cloud.gateway.routes[5].id=WEBSOCKET-SERVICE
-spring.cloud.gateway.routes[5].uri=lb://WEBSOCKET-SERVICE/
-spring.cloud.gateway.routes[5].predicates[0]=Path=/**
+spring.cloud.gateway.routes[6].id=WEBSOCKET-SERVICE
+spring.cloud.gateway.routes[6].uri=lb://WEBSOCKET-SERVICE/
+spring.cloud.gateway.routes[6].predicates[0]=Path=/**
+
+
 
 
 
