--- a/Shore-control/src/main/resources/application.properties
+++ b/Shore-control/src/main/resources/application.properties
@@ -24,6 +24,15 @@ spring.redis.port=6379
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=SHORE-SERVICE
 
+
+##keycloak configuration
+#spring.security.oauth2.client.registration.SECOM-Client.client-id=SECOM-Client
+#spring.security.oauth2.client.registration.SECOM-Client.client-secret=zilcvnVNnCUqf44jd6hACNvRNd6sn0y9
+#spring.security.oauth2.client.registration.SECOM-Client.scope=openid, profile, roles, Owner_ID
+#spring.security.oauth2.client.registration.SECOM-Client.authorization-grant-type=client_credentials
+##spring.security.oauth2.client.registration.SECOM-Client.redirect-uri=http://localhost:8080/login/oauth2/code/{registrationId}
+#spring.security.oauth2.client.provider.SECOM-Client.issuer-uri=http://localhost:8181/realms/SECOM
+
 ##key-cloak configuration
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8181/realms/SECOM/protocol/openid-connect/certs
 #spring.security.oauth2.resourceserver.jwt.issuer=http://localhost:8181/realms/SECOM
