compress and decompress of key trial

--- a/Ship-A/src/main/resources/application.properties
+++ b/Ship-A/src/main/resources/application.properties
@@ -31,4 +31,4 @@ spring.redis.port=6379
 
 
 ##key-cloak configuration
-#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8181/realms/SECOM/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8181/realms/SECOM/protocol/openid-connect/certs
